recursion.hanoi.SplitHanoi2.scala.error
Erreur de compilation :
SplitHanoi2:10: error: expected class or object definition
def splitHanoi(height:Int, src:Int, other:Int, dst1:Int, dst2:Int) {
^SplitHanoi2:26: error: Unmatched closing brace '}' ignored here
}
^